# ggj

./: .gitignore  CLAUDE.md  PLAN.md  README.md  REFACTOR.md  STORY.md  actions.py  alterego.py  delivery.py  gameloop.py  gamestate.py  inputparser.py  io_interface.py  main.py  pyproject.toml  requirements.txt
.claude/: settings.json
src/: __init__.py  actions.py  alterego.py  delivery.py  endings.py  gameloop.py  gamestate.py  inputparser.py  io_interface.py
tests/: test_actions.py  test_alterego.py  test_apartment.py  test_command_pattern.py  test_day_tracking.py  test_delivery.py  test_device_system.py  test_dream_confrontation.py  test_endings.py  test_evolving_world.py  test_expanded_inventory.py  test_gameloop.py  test_gamestate.py  test_inputparser.py  test_io_interface.py  test_room_objects.py  test_sabotage_commands.py
tools/: __init__.py  filecheck.py  run_e2e_tests.py  test_ae_closet_trap.txt  test_ae_phase1.txt  test_ae_resource_denial.txt  test_balance_system.txt  test_barricade_bedroom.txt  test_basic.txt  test_closet_nailing_simple.txt  test_closet_simple.txt  test_comprehensive_start.txt  test_container_basic.txt  test_day_tracking.txt  test_debug_inventory.txt  test_defeat_ending.txt  test_eating_mechanics.txt  test_electronics_store.txt  test_error_handling.txt  test_fridge_food.txt  test_government_check.txt  test_grocery_expanded.txt  test_hardware_expanded.txt  test_ice_bath.txt  test_ice_bath_error_handling.txt  test_ice_bath_success.txt  test_inventory_management.txt  test_nail_consumption_fixed.txt  test_new_room_objects.txt  (+18 more)
(+23 files in other folders)
